reverted deprecation change since we are still using java 11, not 19