@@ -236,7 +236,8 @@ public class ThreadDump extends HashMap<ThreadDump.StackTrace, List<String>> imp
                     while (tracename.length() < 20) tracename = tracename + "_";
                     tracename = "[" + tracename + "] ";
                 }
-                final String threadtitle = tracename + "Thread= " + thread.getName() + " " + (thread.isDaemon()?"daemon":"") + " id=" + thread.threadId() + " " + thread.getState().toString();
+                @SuppressWarnings("deprecation")
+                final String threadtitle = tracename + "Thread= " + thread.getName() + " " + (thread.isDaemon()?"daemon":"") + " id=" + thread.getId() + " " + thread.getState().toString();
                 String className;
                 boolean cutcore = true;
                 for (int i = 0; i < stackTraceElements.length; i++) {
